added some bootstrap styling on index - not nice yet

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,8 @@
-
 <% @tasks.each do |t|%>
-  <ul>
-    <li><%= t.id  %></li>
-    <li><%= t.title %></li>
-  </ul>
+  <div class="card" style="width: 12rem; border-style: solid; border-radius: 20px; margin: 15px;">
+    <div class="card-body">
+      <h5 class="card-title"><%= t.title %></h5>
+      <p class="card-text"><%= t.details %></p>
+    </div>
+  </div>
 <% end %>
